--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -3,8 +3,17 @@
   display: flex;
   justify-content: center;
   padding: 1.25rem 0;
+  align-items: center;
+  gap: 1rem;
 }
 
 .header img {
   height: 2rem;
+}
+
+.header strong {
+  font-family: 'Roboto', sans-serif;
+  font-weight: bold;
+  line-height: 160%;
+  font-size: 1.6rem;
 }
